Reverting back because Boolean.valueOf(boolean) exists since 1.4